--- a/roles/elasticsearch/tasks/main.yml
+++ b/roles/elasticsearch/tasks/main.yml
@@ -14,8 +14,16 @@
 
 - name: Adding Elasticsearch repo
   apt_repository:
-   repo: deb https://artifacts.elastic.co/packages/5.x/apt stable main
+   repo: deb https://artifacts.elastic.co/packages/6.x/apt stable main
    state: present
+
+# Installing required apt-transport-https
+
+- name: install apt-transport-https
+  apt:
+    pkg: apt-transport-https
+    state: present
+    update_cache: yes
 
 # Installing Elasticsearch
 
