--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -1,23 +1,47 @@
 ---
+
 #
-# Installing Java 8
+# Add/Update APT repository
 #
 
-# Add the Java repo
+- name: Debian | Add APT repo for openjdk 8
+  apt_repository:
+    repo: deb http://http.debian.net/debian jessie-backports main
+    state: present
 
-- name: Add the Java PPA repo
-  apt_repository: 
-   repo: ppa:webupd8team/java
+- name: Debian | Install WebUpd8 APT key
+  apt_key:
+    id: EEA14886
+    keyserver: keyserver.ubuntu.com
+    state: present
+  register: get_webupd8_key
+  until: get_webupd8_key|success
+  retries: 5
+  delay: 10
 
-# Accept Oracle license
+- name: Debian | Add WebUpd8 APT repo
+  apt_repository:
+    repo: deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main
+    state: present
 
-- name: Automatically accept the Oracle license 
-  shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
-  
-# Install Java 
+- name: Debian | Update APT cache
+  apt: 
+   update_cache: yes 
 
-- name: Install Java 8
+#
+# Install/Configure Java package(s)
+#
+
+- name: Debian | Accept Oracle Java License
+  debconf:
+    name: "oracle-java8-installer"
+    question: 'shared/accepted-oracle-license-v1-1'
+    value: 'true'
+    vtype: 'select'
+
+- name: Debian | Ensure Java is installed
   apt:
-   name: oracle-java8-installer
-   state: present
-   update_cache: yes
+    name: openjdk-8-jdk
+    state: installed
+  register: install_java_command
+
