--- a/site.yml
+++ b/site.yml
@@ -3,12 +3,13 @@
 # Playbook to install the ELK stack + Beats
 #
 - hosts: elkservers
-  remote_user: ubuntu
+  remote_user: viahub
   become: yes
   become_user: root
   roles:
   - { role: java }
   - { role: elasticsearch }
   - { role: kibana }
-  - { role: metricbeat }
+  - { role: logstash }
+  #- { role: metricbeat }
 
